Fix: History페이지 overflow-hidden으로 스크롤 안되는 오류 수정

--- a/static/nursing_knowledges/css/history.css
+++ b/static/nursing_knowledges/css/history.css
@@ -1,3 +1,7 @@
+body, html{
+    overflow: auto !important;
+}
+
 .header{
     border-bottom: solid 1px #D6D6D6;
 }
